--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "fastify": "^4.17.0"
+    "fastify": "^4.17.0",
+    "nanoid": "^3.3.6"
   }
 }
